--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
     "name": "boilerplate_1.0.0",
     "version": "1.0.0",
     "description": "My personal starter kit for web dev",
-    "main": "buildScript/server.js",
+    "main": "index.js",
     "scripts": {
         "start": "babel-node buildScripts/server",
         "prestart:dev": "babel-node buildScripts/utils/startMessage",
         "start:dev": "nodemon --exec babel-node buildScripts/server",
         "share": "lt --port 3000",
+        "build": "webpack --config webpack.config.dev.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Damilola",
     "license": "MIT",
     "dependencies": {
+        "@babel/core": "^7.10.4",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "open": "^7.0.4"
@@ -26,9 +28,35 @@
         "babel-node": "0.0.1-security",
         "babel-preset-latest": "^6.24.1",
         "babel-register": "^6.26.0",
+        "chai": "3.5.0",
         "chalk": "^4.1.0",
+        "cheerio": "0.22.0",
+        "compression": "1.6.2",
+        "cross-env": "3.1.3",
+        "css-loader": "0.25.0",
+        "eslint": "3.8.1",
+        "eslint-plugin-import": "2.0.1",
+        "eslint-watch": "2.1.14",
+        "express": "4.14.0",
+        "extract-text-webpack-plugin": "1.0.1",
+        "html-webpack-plugin": "2.22.0",
+        "jsdom": "9.8.0",
+        "json-schema-faker": "0.3.6",
+        "json-server": "0.8.22",
         "localtunnel": "^2.0.0",
+        "mocha": "3.1.2",
+        "nock": "8.1.0",
+        "npm-run-all": "3.1.1",
+        "nsp": "2.6.2",
         "numeral": "^2.0.6",
-        "webpack": "^4.43.0"
+        "open": "0.0.5",
+        "rimraf": "2.5.4",
+        "style-loader": "0.13.1",
+        "surge": "0.18.0",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-middleware": "^3.7.2",
+        "webpack-hot-middleware": "2.13.0",
+        "webpack-md5-hash": "0.0.5"
     }
 }
